@@ -1,12 +1,9 @@
 package com.example.websockets.models;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
+import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.stream.Collectors;
 
 @Getter
@@ -14,20 +11,21 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 public class UserData {
     private User user;
+    private Date nextNotify;
     private List<Integer> availableOperation;
     private boolean isSubscribeNotification;
-    private List<Integer> history;
+    private final ConcurrentLinkedQueue<OperationHistory> operationHistory = new ConcurrentLinkedQueue<>();
     public UserData(User user, List<Integer> availableOperation, boolean isSubscribeNotification) {
         this.user = user;
         this.availableOperation = availableOperation;
         this.isSubscribeNotification = isSubscribeNotification;
     }
 
-    public void addToHistory(List<List<Integer>> list) {
-        List<Integer> flat = list.stream()
-                .flatMap(List::stream)
-                .toList();
-        history.addAll(flat);
+    public void addToHistory(List<List<Integer>> list, Date date) {
+        List<Integer> operationList = list.stream()
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList());
+        operationHistory.offer(new OperationHistory(date,operationList));
     }
 
 
